# ghacks-prefs-updater-rs

./: Cargo.toml
src/: main.rs
