[package]
name = "ghacks_prefs_updater"
version = "0.1.0"
authors = ["Genna Wingert <wingertge@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
chrono = "0.4"
dialoguer = "0.5"
reqwest = "0.10"
tokio = { version = "0.2", features = ["macros"] }